dongle-smartcontract/test_results_v12.txt
   Compiling dongle-contract v0.1.0 (C:\Users\user\Dongle-Smartcontract\dongle-smartcontract)
error[E0432]: unresolved imports `crate::types::ProjectRegistrationParams`, `crate::types::ProjectUpdateParams`
 --> src\project_registry.rs:2:49
  |
2 | use crate::types::{Project, VerificationStatus, ProjectRegistrationParams, ProjectUpdateParams};
  |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^ no `ProjectUpdateParams` in `types`
  |                                                 |
  |                                                 no `ProjectRegistrationParams` in `types`

error[E0432]: unresolved import `crate::types::ProjectRegistrationParams`
 --> src\registration_tests.rs:4:5
  |
4 | use crate::types::ProjectRegistrationParams;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `ProjectRegistrationParams` in `types`

error[E0432]: unresolved import `crate::types::ProjectRegistrationParams`
 --> src\verification_tests.rs:5:44
  |
5 |     use crate::types::{VerificationStatus, ProjectRegistrationParams};
  |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^ no `ProjectRegistrationParams` in `types`

error[E0425]: cannot find type `ProjectRegistrationParams` in this scope
  --> src\lib.rs:39:17
   |
39 |         params: ProjectRegistrationParams,
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ProjectUpdateParams` in this scope
  --> src\lib.rs:46:17
   |
46 |         params: ProjectUpdateParams,
   |                 ^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `ProjectRegistrationParams` in module `crate::types`
  --> src\test.rs:23:32
   |
23 |     let params = crate::types::ProjectRegistrationParams {
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::types`

error[E0422]: cannot find struct, variant or union type `ProjectRegistrationParams` in module `crate::types`
   --> src\test.rs:438:36
    |
438 |         let params = crate::types::ProjectRegistrationParams {
    |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::types`

warning: unused import: `crate::errors::ContractError as Error`
 --> src\test.rs:3:5
  |
3 | use crate::errors::ContractError as Error;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::types::VerificationStatus`
 --> src\test.rs:4:5
  |
4 | use crate::types::VerificationStatus;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Vec`
 --> src\test.rs:8:58
  |
8 | use soroban_sdk::{Address, Env, String as SorobanString, Vec};
  |                                                          ^^^

error[E0061]: this method takes 1 argument but 7 arguments were supplied
   --> src\review_registry.rs:211:33
    |
211 |         let project_id = client.register_project(&owner, &name, &desc, &cat, &None, &None, &None);
    |                                 ^^^^^^^^^^^^^^^^
    |
note: method defined here
   --> src\lib.rs:37:12
    |
 37 |     pub fn register_project(
    |            ^^^^^^^^^^^^^^^^
help: remove the extra arguments
    |
211 -         let project_id = client.register_project(&owner, &name, &desc, &cat, &None, &None, &None);
211 +         let project_id = client.register_project(&owner);
    |

Some errors have detailed explanations: E0425, E0432.
For more information about an error, try `rustc --explain E0425`.
error: could not compile `dongle-contract` (lib) due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
Some errors have detailed explanations: E0061, E0422, E0425, E0432.
For more information about an error, try `rustc --explain E0061`.
warning: `dongle-contract` (lib test) generated 3 warnings
error: could not compile `dongle-contract` (lib test) due to 8 previous errors; 3 warnings emitted
